# cmakeDependencyManagement

./: CMakeLists.txt
cmake_managetool/cmake_bin_manage/: CMakeLists.txt
cmake_managetool/cmake_bin_manage/cmake/: extract_archive.cmake  wget.cmake
cmake_managetool/cmake_bin_manage/tools/wget/: .wget-hsts
cmake_managetool/cmake_vcpkg_manage/: CMakeLists.txt
cmake_managetool/cmake_vcpkg_manage/src/: driver.cpp
core/: CMakeLists.txt  main.c
tools/wget/: .wgetrc  readme.txt
